--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -15,6 +15,7 @@
     "com.unity.multiplayer.center": "1.0.0",
     "com.unity.nuget.mono-cecil": "1.11.5",
     "com.unity.render-pipelines.universal": "17.2.0",
+    "com.unity.shadergraph": "17.2.0",
     "com.unity.test-framework": "1.5.1",
     "com.unity.timeline": "1.8.9",
     "com.unity.ugui": "2.0.0",
